# aegra-agents

./: .gitignore  README.md  aegra.json  ideal_answers.md  link.py  pyproject.toml
docs/: json_analyzer.md  tz_reasoning_trace_and_describe_answer.md  uat-announcement.md
graphs/: analytic_orchestrator.py  json_analyzer.py  knowledge_agent.py
langgraph_executor/aegra_agents/analytic_orchestrator/: graph.py  nodes.py  prompts.py  state.py
migrations/json_analyzer/: 0001_initial.sql
migrations/wiki_rag/: 0001_initial.sql  0002_ingest.sql
scripts/: chat_orchestrator.py  chat_orchestrator_aegra.py  diagnose_orchestrator_context.py  e2e_causal.py  e2e_orchestrator.py  reprocess_direction.py  run_doc_manager.py  run_kb_chat.py  run_orchestrator.py  run_wiki_ingest.py  smoke_causal.py  smoke_gap_resolver.py
tests/analytic_orchestrator/: test_assignments_insights.py  test_graph_topology.py  test_ground_wiki.py  test_initial_analysis.py  test_message_contract.py  test_metrics_context.py
tests/analytic_orchestrator_v2/: test_assignments_payload_v2.py  test_business_flow_v2.py  test_graph_topology_v2.py
tests/json_analyzer/: test_inverse_metrics.py  test_metric_kinds.py  test_metric_tree_levels.py  test_null_element_arg.py  test_render.py  test_situation_overview.py  test_sqlite_store_queries.py
tests/json_analyzer_causal/: test_metric_kinds.py  test_null_tabnum.py  test_rank_elements.py  test_render.py
tests/json_analyzer_v2/: test_analytics_v2.py
tests/json_analyzer_v3/: test_element_slice.py  test_empty_fact_skip.py
(+101 files in other folders)
