[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegra-agents"
version = "0.1.0"
description = "Шаблоны LangGraph-агентов (knowledge / json / analytic_orchestrator) для self-hosted aegra с GigaChat"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.50",
    "langchain>=0.3",
    "langchain-core>=0.3.0",
    "langchain-gigachat>=0.3.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "pydantic>=2",
    "pydantic-settings>=2",
]

[tool.setuptools.packages.find]
include = ["langgraph_executor*"]
